add filtration on data

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_VALANTIS_BACKEND_URL="https://api.valantis.store:40000"
+VITE_VALANTIS_BACKEND_URL="https://api.valantis.store:41000/"
 VITE_VALANTIS_BACKEND_PASSWORD="Valantis"
